--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
         <meta charset="utf-8"/>
         <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
+        <meta content="The internet-facing extension of my self" name="description"/>
+        <meta content="Timothy Davenport" name="author"/>
+        <meta content="tim, timothy, davenport, scripter, data scientist," name="keywords"/>
         <title>tim(othy)</title>
+        <link href="http://fonts.googleapis.com/css?family=Ubuntu+Mono|Ubuntu" rel="stylesheet" type="text/css"/>
+        <link href="css/tim.css" rel="stylesheet" type="text/css"/>
+        <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <h1>
-            def tim(othy) :
-                return self
-        </h1>
+        <main class="container-fluid fill-container" id="page"></main>
+        <template id="home-template">
+            <section class="bringIn" id="home">
+                <header id="intro">
+                    <h1 class="text-font">
+                        <span class="bigger"><span class="t1">tim</span><span class="bracket">(</span><span class="t2">othy</span><span class="bracket">)</span></span>
+                    </h1>
+                    <h1 class="text-font"><span class="bigger">I <span id="verb">______</span> for fun.</span></h1>
+                </header>
+                <p class="geometers">ΑΓΕΩΜΕΤΡΗΤΟΣ ΜΗΔΕΙΣ ΕΙΣΙΤΩ</p>
+            </section>
+        </template>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="js/tim.js"></script>
     </body>
 </html>
