--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <link href="http://fonts.googleapis.com/css?family=Ubuntu+Mono|Ubuntu" rel="stylesheet" type="text/css"/>
         <link href="css/tim.css" rel="stylesheet" type="text/css"/>
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
+        <link href="img/favicon.ico" id="favicon" rel="shortcut icon" type="image/x-icon"/>
+        <link href="img/icon_60x60.png" rel="apple-touch-icon"/>
+        <link href="img/icon_76x76.png" rel="apple-touch-icon" sizes="76x76"/>
+        <link href="img/icon_120x120.png" rel="apple-touch-icon" sizes="120x120"/>
+        <link href="img/icon_152x152.png" rel="apple-touch-icon" sizes="152x152"/>
     </head>
     <body>
         <main class="container-fluid fill-container" id="page"></main>
