centered and resized text

--- a/404.html
+++ b/404.html
@@ -21,11 +21,11 @@
         <main class="container-fluid fill-container" id="page"></main>
         <template id="home-template">
             <section class="bringIn" id="home">
-                <header id="intro">
+                <header id="intro" class="text-center">
                     <h1 class="text-font">
                         <span class="bigger"><span class="t1">4</span><span class="bracket">Oh</span><span class="t2">4</span><span class="bracket">!</span></span>
                     </h1>
-                    <h1 class="text-font"><span class="bigger">This page does not exist, please go <a href="index.html">home</a>.</h1>
+                    <h2 class="text-font"><span class="bigger">This page does not exist,<br>please go <a href="index.html">home</a>.</h2>
                 </header>
                 <p class="geometers">ΑΓΕΩΜΕΤΡΗΤΟΣ ΜΗΔΕΙΣ ΕΙΣΙΤΩ</p>
             </section>
