--- a/source/pages/404.html
+++ b/source/pages/404.html
@@ -2,14 +2,16 @@ title       : Hmm... 4Oh4!
 description : Hmm... that place doesn't seem to exist
 
 <main class="container-fluid fill-container">
-	<section id="error404" class="bringIn">
-		<div class="jumbotron">
-			<header>
-                <h1>Hmm...</h1>
-                <h1><small>That place doesn't seem to exist.</small></h1>
-                <hr>
-				<p class="lead">Please return <a href="{{relativepath}}index.html">home.</a></p>
-			</header>
-		</div>
+	<section id="error404" class="bringIn">        
+        <header id="intro" class="text-center">
+            <h1 class="text-font">
+                <span class="bigger"><span class="t1">4</span><span class="bracket">Oh</span><span class="t2">4</span><span class="bracket">!</span></span>
+            </h1>
+            <hr>
+            <h1>Hmm...</h1>
+            <h1><small>That place doesn't seem to exist.</small></h1>
+            <p class="lead">Please return <a href="{{relativepath}}index.html">home.</a></p>
+        </header>
+        <p class="geometers">&Alpha;&Gamma;&Epsilon;&Omega;&Mu;&Epsilon;&Tau;&Rho;&Eta;&Tau;&Omicron;&Sigma; &Mu;&Eta;&Delta;&Epsilon;&Iota;&Sigma; &Epsilon;&Iota;&Sigma;&Iota;&Tau;&Omega;</p>
 	</section>
 </main>
