add home button, change copydate

--- a/output/404.html
+++ b/output/404.html
@@ -62,6 +62,7 @@ t
 </div>
 </a>
 </li>
+<li><a alt="home" class="no-hover" href="#!/home" title="home">home</a></li>
 <li><a alt="epigraph" class="no-hover" href="#!/epigraph" title="epigraph">epigraph</a></li>
 <li><a alt="synopsis" class="no-hover" href="#!/synopsis" title="synopsis">synopsis</a></li>
 <li><a alt="ruminations" class="no-hover" href="#!/ruminations" title="ruminations">ruminations</a></li>
@@ -120,7 +121,7 @@ t
 <p>Click the arrows (or use your keyboard's arrow keys) to view <em>pages</em> in order, otherwise use the <em>planetary menu</em> in the upper left.</p>
 </div>
 <div class="holdoff updn4" id="copy">
-	&copy; <span id="copyright">2014, <a alt="tmthydvnprt" class="no-hover" href="#!/contact" title="tmthydvnprt">tmthydvnprt</a>.</span>
+	&copy; <span id="copyright">2015, <a alt="tmthydvnprt" class="no-hover" href="#!/contact" title="tmthydvnprt">tmthydvnprt</a>.</span>
 </div>
 <!--quilted templates patch-->
 <template id="monogram-template">
