--- a/source/patches/header.html
+++ b/source/patches/header.html
@@ -13,6 +13,7 @@
 						</div>
 					</a>
 				</li>
+				<li><a class="no-hover" href="#!/home">home</a></li>
 				<li><a class="no-hover" href="#!/epigraph">epigraph</a></li>
 				<li><a class="no-hover" href="#!/synopsis">synopsis</a></li>
 				<li><a class="no-hover" href="#!/ruminations">ruminations</a></li>
