added list-group, project pages and github access

--- a/output/index.html
+++ b/output/index.html
@@ -66,6 +66,7 @@ t
 <li><a alt="epigraph" class="no-hover" href="#!/epigraph" title="epigraph">epigraph</a></li>
 <li><a alt="synopsis" class="no-hover" href="#!/synopsis" title="synopsis">synopsis</a></li>
 <li><a alt="ruminations" class="no-hover" href="#!/ruminations" title="ruminations">ruminations</a></li>
+<li><a alt="projects" class="no-hover" href="#!/projects" title="projects">projects</a></li>
 <li><a alt="r&eacute;sum&eacute;" class="no-hover" href="#!/resume" title="r&eacute;sum&eacute;">r&eacute;sum&eacute;</a></li>
 <li><a alt="colophon" class="no-hover" href="#!/colophon" title="colophon">colophon</a></li>
 <li><a alt="contact" class="no-hover" href="#!/contact" title="contact">contact</a></li>
@@ -136,6 +137,27 @@ t
 <div class="row">
 <header><h1 class="text-center"><em>R&eacute;sum&eacute;</em></h1></header>
 <div class="well col-md-10 col-md-offset-1" id="tim-resume">&zwnj;</div>
+</div>
+</section>
+</template>
+<template id="projects-template">
+<section class="bringIn">
+<div class="row">
+<div class="col-sm-12">
+<div class="row">
+<div class="col-sm-12">
+<header><h1><em>Projects</em></h1></header>
+<hr/>
+</div>
+</div>
+<div class="row">
+<div class="col-sm-8 col-sm-offset-2">
+<ul class="list-group" id="project-list">
+</ul>
+</div>
+</div>
+<hr/>
+</div>
 </div>
 </section>
 </template>
