--- a/source/patches/header.html
+++ b/source/patches/header.html
@@ -17,6 +17,7 @@
 				<li><a class="no-hover" href="#!/epigraph">epigraph</a></li>
 				<li><a class="no-hover" href="#!/synopsis">synopsis</a></li>
 				<li><a class="no-hover" href="#!/ruminations">ruminations</a></li>
+				<li><a class="no-hover" href="#!/projects">projects</a></li>
 				<li><a class="no-hover" href="#!/resume">r&eacute;sum&eacute;</a></li>
 				<li><a class="no-hover" href="#!/colophon">colophon</a></li>
 				<li><a class="no-hover" href="#!/contact">contact</a></li>
