--- a/output/index.html
+++ b/output/index.html
@@ -143,9 +143,7 @@ t
 <template id="projects-template">
 <section class="bringIn">
 <div class="row">
-<div class="col-sm-12">
-<div class="row">
-<div class="col-sm-12">
+<div class="col-sm-10 col-sm-offset-1">
 <header><h1><em>Projects</em></h1></header>
 <hr/>
 </div>
@@ -154,9 +152,6 @@ t
 <div class="col-sm-8 col-sm-offset-2">
 <ul class="list-group" id="project-list">
 </ul>
-</div>
-</div>
-<hr/>
 </div>
 </div>
 </section>
