--- a/output/404.html
+++ b/output/404.html
@@ -80,12 +80,12 @@ t
 <section class="bringIn" id="error404">
 <header class="text-center" id="intro">
 <h1 class="text-font">
-<span class="bigger"><span class="t1">4</span><span class="bracket">Oh</span><span class="t2">4</span><span class="bracket">!</span></span>
+<span class=""><span class="t1">4</span><span class="bracket">Oh</span><span class="t2">4</span><span class="bracket">!</span></span>
 </h1>
 <hr/>
-<h1>Hmm...<br/><small>This place doesn't<br/>seem to exist.</small></h1>
+<h2>Hmm...<br/><small>This place doesn't<br/>seem to exist.</small></h2>
 <hr/>
-<h3>Please return <a alt="home." href="index.html" title="home.">home.</a></h3>
+<h3>Please go back or return <a alt="home." href="index.html" title="home.">home.</a></h3>
 </header>
 <p class="geometers">&Alpha;&Gamma;&Epsilon;&Omega;&Mu;&Epsilon;&Tau;&Rho;&Eta;&Tau;&Omicron;&Sigma; &Mu;&Eta;&Delta;&Epsilon;&Iota;&Sigma; &Epsilon;&Iota;&Sigma;&Iota;&Tau;&Omega;</p>
 </section>
@@ -161,8 +161,18 @@ t
 <hr/>
 </div>
 </div>
+<!--
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <h2>Stats</h2>
+                <div id="project-stats">
+                </div>
+            </div>
+        </div>
+-->
 <div class="row">
 <div class="col-sm-8 col-sm-offset-2">
+<h2>Repositories</h2>
 <ul class="list-group" id="project-list">
 </ul>
 </div>
