--- a/source/patches/footer.html
+++ b/source/patches/footer.html
@@ -17,5 +17,8 @@
 	<p>Click the arrows (or use your keyboard's arrow keys) to view <em>pages</em> in order, otherwise use the <em>planetary menu</em> in the upper left.</p>
 </div>
 <div id="copy" class="holdoff updn4">
-	&copy; <span id="copyright">{{copydate}}, <a class="no-hover" href="#!/contact">{{copyrighter}}</a>.</span>
+	&copy; <span id="slideover">{{copydate}}, <a class="no-hover" href="#!/contact">{{copyrighter}}</a>.</span>
+</div>
+<div id="at" class="holdoff updn5">
+    @ <span id="slideover"><a class="no-hover" href="#!/contact">Contact Me</a></span>
 </div>
