--- a/output/404.html
+++ b/output/404.html
@@ -151,10 +151,22 @@ t
 <template id="resume-template">
 <section class="bringIn">
 <div class="row">
-<header><h1 class="text-center"><em>R&eacute;sum&eacute;</em></h1></header>
 <div class="well col-md-10 col-md-offset-1" id="tim-resume">&zwnj;</div>
 </div>
+<div class="row">
+<div class="well col-md-10 col-md-offset-1" id="tim-timeline">&zwnj;</div>
+</div>
 </section>
+<div class="bringIn" id="resume-menu">
+<div class="row">
+<div class="col-md-10 col-md-offset-1">
+<ul class="list-inline">
+<li><a alt=" Document" class="no-hover" href="#document" title=" Document"><i class="fa fa-fw fa-file-text"></i> Document</a></li>
+<li><a alt=" Timeline" class="no-hover" href="#timeline" title=" Timeline"><i class="fa fa-fw fa-tasks"></i> Timeline</a></li>
+</ul>
+</div>
+</div>
+</div>
 </template>
 <template id="projects-template">
 <section class="bringIn">
