--- a/output/index.html
+++ b/output/index.html
@@ -144,16 +144,16 @@ t
 <div class="well col-md-10 col-md-offset-1" id="tim-timeline">&zwnj;</div>
 </div>
 </section>
-<div class="bringIn" id="resume-menu">
-<div class="row">
-<div class="col-md-10 col-md-offset-1">
-<ul class="list-inline">
+<nav class="bringIn navbar navbar-default navbar-fixed-top" id="resume-menu">
+<div class="container-fluid">
+<div class="collapse navbar-collapse">
+<ul class="nav navbar-nav">
 <li><a alt=" Document" class="no-hover" href="#document" title=" Document"><i class="fa fa-fw fa-file-text"></i> Document</a></li>
 <li><a alt=" Timeline" class="no-hover" href="#timeline" title=" Timeline"><i class="fa fa-fw fa-tasks"></i> Timeline</a></li>
 </ul>
 </div>
 </div>
-</div>
+</nav>
 </template>
 <template id="projects-template">
 <section class="bringIn">
