fixed sub menu navbar on resume page

--- a/source/patches/header.html
+++ b/source/patches/header.html
@@ -3,7 +3,7 @@
 		<nav>
 			<ul class="list-unstyled">
 				<li>
-					<a href="#!/home" class="no-hover">
+					<a href="#!/home" class="no-hover" alt="navigation" title="navigation">
 						<div class="logowrapper">
 							<div class="logo">
 								<span class="d logo-letter">d</span>
