--- a/output/index.html
+++ b/output/index.html
@@ -36,23 +36,7 @@
 <nav>
 <ul class="list-unstyled">
 <li>
-<a alt="
-
-
-d
-m
-t
-
-
-" class="no-hover" href="#!/home" title="
-
-
-d
-m
-t
-
-
-">
+<a alt="navigation" class="no-hover" href="#!/home" title="navigation">
 <div class="logowrapper">
 <div class="logo">
 <span class="d logo-letter">d</span>
@@ -144,12 +128,13 @@ t
 <div class="well col-md-10 col-md-offset-1" id="tim-timeline">&zwnj;</div>
 </div>
 </section>
-<nav class="bringIn navbar navbar-default navbar-fixed-top" id="resume-menu">
-<div class="container-fluid">
-<div class="collapse navbar-collapse">
-<ul class="nav navbar-nav">
-<li><a alt=" Document" class="no-hover" href="#document" title=" Document"><i class="fa fa-fw fa-file-text"></i> Document</a></li>
-<li><a alt=" Timeline" class="no-hover" href="#timeline" title=" Timeline"><i class="fa fa-fw fa-tasks"></i> Timeline</a></li>
+<nav class="navbar navbar-default navbar-fixed-top bringIn" id="resume-menu">
+<div class="container">
+<div class="navbar-header">
+<span class="navbar-brand">R&eacute;sum&eacute;:</span>
+<ul class="nav navbar-nav navbar-left">
+<li><a alt=" document" class="no-hover" href="#document" title=" document"><i class="fa fa-fw fa-file-text"></i> document</a></li>
+<li><a alt=" timeline" class="no-hover" href="#timeline" title=" timeline"><i class="fa fa-fw fa-tasks"></i> timeline</a></li>
 </ul>
 </div>
 </div>
