refined css, footer and home page

--- a/output/404.html
+++ b/output/404.html
@@ -76,19 +76,7 @@
 </main>
 <!--quilted footer patch-->
 <div class="holdoff updn2" id="clock">
-<a alt="
-
-&zwnj;
-&zwnj;
-&zwnj;
-
-" class="no-hover" href="#!/time" title="
-
-&zwnj;
-&zwnj;
-&zwnj;
-
-">
+<a alt="time" class="no-hover" href="#!/time" title="time">
 <div id="frame">
 <div id="minute">&zwnj;</div>
 <div id="hour">&zwnj;</div>
@@ -105,11 +93,26 @@
 <header><h1><em>?</em></h1></header>
 <p>Click the arrows (or use your keyboard's arrow keys) to view <em>pages</em> in order, otherwise use the <em>planetary menu</em> in the upper left.</p>
 </div>
-<div class="holdoff updn4" id="copy">
-	&copy; <span id="slideover">2015, <a alt="tmthydvnprt" class="no-hover" href="#!/contact" title="tmthydvnprt">tmthydvnprt</a>.</span>
-</div>
 <div class="holdoff updn5" id="at">
-    @ <span id="slideover"><a alt="Contact Me" class="no-hover" href="#!/contact" title="Contact Me">Contact Me</a></span>
+    @
+     <span id="slideover">
+<a alt="contact" class="no-hover" href="#!/contact" title="contact">contact me 
+            <span class="bracket">{</span>
+<ul class="social-list list-inline">
+<li><i class="fa-fw fa fa-envelope "></i></li>
+<li><i class="fa-fw fa fa-link "></i></li>
+<li><i class="fa-fw fa fa-twitter "></i></li>
+<li><i class="fa-fw fa fa-github "></i></li>
+<li><i class="fa-fw fa fa-stack-overflow "></i></li>
+<li><i class="fa-fw fa fa-mobile "></i></li>
+<li><i class="fa-fw fa fa-location-arrow valign-top"></i></li>
+</ul>
+<span class="bracket">}</span>
+</a>
+</span>
+</div>
+<div class="holdoff updn4" id="copy">
+	&copy; <span id="slideover"> 2015, <a alt="Timothy Davenport" class="no-hover" href="#!/contact" title="Timothy Davenport">Timothy Davenport</a>.</span>
 </div>
 <!--quilted templates patch-->
 <template id="monogram-template">
@@ -601,7 +604,12 @@ Ecclesiastes 1:9
 <section class="bringIn">
 <header id="intro">
 <h1 class="text-font"><span class="bigger"><span class="t1">tim</span><span class="bracket">(</span><span class="t2">othy</span><span class="bracket">)</span></span></h1>
-<h1 class="text-font"><span class="bigger">I <span id="verb">______</span> for fun.</span></h1>
+<h1 class="text-font"><span class="bigger">I <span id="verb">_______</span> for fun.</span></h1>
+<ul class="list-unstyled" id="definition">
+<li>{f}ulfilling</li>
+<li>{u}nencumbered</li>
+<li>{n}joyment</li>
+</ul>
 </header>
 <p class="geometers">&Alpha;&Gamma;&Epsilon;&Omega;&Mu;&Epsilon;&Tau;&Rho;&Eta;&Tau;&Omicron;&Sigma; &Mu;&Eta;&Delta;&Epsilon;&Iota;&Sigma; &Epsilon;&Iota;&Sigma;&Iota;&Tau;&Omega;</p>
 </section>
