added verb hover

--- a/output/index.html
+++ b/output/index.html
@@ -591,7 +591,7 @@ Ecclesiastes 1:9
 <section class="bringIn">
 <header id="intro">
 <h1 class="text-font"><span class="bigger"><span class="t1">tim</span><span class="bracket">(</span><span class="t2">othy</span><span class="bracket">)</span></span></h1>
-<h1 class="text-font"><span class="bigger">I <span id="verb">_______</span> for fun.</span></h1>
+<h1 class="text-font"><span class="bigger">I <span id="verb-container"><span id="verb">_______</span><div id="verb-list"></div></span> for fun.</span></h1>
 <ul class="list-unstyled" id="definition">
 <li>{f}ulfilling</li>
 <li>{u}nencumbered</li>
