corrected spelling on epigraph page

--- a/output/index.html
+++ b/output/index.html
@@ -254,9 +254,8 @@ f2(x) = [ 40.  34.  28.  22.  16.  12.]
                     What you are about to experience may or may not make sense; either you <em>will</em> understand, or you will have been given <strong>strings</strong>, threads to unravel a spool of endless topics <em>to</em> understand.
                 </p>
 <p>
-                     Unquestionably, one ought never be board, for there are far to great a number of things to fascinate and occupy the mind.
+                     Unquestionably, one ought never be bored, for there are far to great a number of things to fascinate and occupy the mind.
                 </p>
-<p>google everything!</p>
 <p style="opacity:0;">This was copied from tmthydvnprt.com.</p>
 <footer><cite title="tmthydvnprt.com"><a alt="tmthydvnprt.com" href="tmthydvnprt.com/#!/epigraph" title="tmthydvnprt.com">tmthydvnprt.com</a></cite></footer>
 </blockquote>
@@ -306,15 +305,15 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAACXBIWXMAAA
 <h3>Design</h3>
 <hr/>
 <p>
-						A look at the source of this site will identify a static one-page design with <code>&lt;template&gt;</code>s and a simple
+						A look at the <span class="code-font">source</span> of this site will identify a static one-page design with <code>&lt;template&gt;</code>s and a simple
 						 <code>hashchange</code> router. Downloading a whole website from one <code><abbr title="Uniform Resource Locator">url</abbr></code>,
 						 still with an interactive or nested experience, seems very elegant. Being interested in Machine Learning, the idea of
 						 a semantic web is wonderful; therefore, the <samp><a alt="#!/resume" href="#!/resume" title="#!/resume">#!/resume</a></samp> and <samp><a alt="#!/contact" href="#!/contact" title="#!/contact">#!/contact</a></samp>
 <em>pages</em> use <a alt="microformat2" href="http://microformats.org/wiki/microformats2" target="_blank" title="microformat2">microformat2</a> structured data.
                          The <samp><a alt="#!/projects" href="#!/projects" title="#!/projects">#!/projects</a></samp> <em>page</em> uses <code>ajax</code> calls to the <a alt="GitHub API" href="https://developer.github.com/v3/" title="GitHub API">GitHub API</a> for gathering project data.
                          All hover events and animations, less one, are implemented using <code>css</code> and <strong>not</strong> <code>JavaScript</code>.
-                        
 					</p>
+<p>This site was <em>stitched</em> together with my own static site generator, <a alt="quilt" href="http://tmthydvnprt.com/quilt/" title="quilt">quilt</a>.</p>
 <p> All <code>.html</code>, <code>.css</code> &amp; <code>.js</code> is home grown except for <small>(credit where credit is due)</small> :</p>
 <ol>
 <li>a customized <code><a alt="bootstrap.css" href="http://getbootstrap.com/customize/?id=1e76d717b84935ce2665" target="_blank" title="bootstrap.css">bootstrap.css</a></code>
