--- a/output/404.html
+++ b/output/404.html
@@ -359,7 +359,7 @@ Ecclesiastes 1:9
 						 uses <a alt="Ubuntu" class="typo" href="https://www.google.com/fonts/specimen/Ubuntu" target="_blank" title="Ubuntu">Ubuntu</a> for prose &amp; headings,
 						 <a alt="Ubuntu Mono" class="typo code-font" href="https://www.google.com/fonts/specimen/Ubuntu+Mono" target="_blank" title="Ubuntu Mono">Ubuntu Mono</a> for code,
 						 <a alt="Sorts Mill Goudy" class="typo wiki-font" href="https://www.google.com/fonts/specimen/Sorts+Mill+Goudy" target="_blank" title="Sorts Mill Goudy">Sorts Mill Goudy</a> for
-						 wikipedia<a alt="W" href="http://en.wikipedia.org/" target="_blank" title="W">W</a> links, &amp;
+						 wikipedia <a alt="W" href="http://en.wikipedia.org/" target="_blank" title="W">W</a> links, &amp;
 						 <a alt="Poiret One" class="typo logo-font" href="https://www.google.com/fonts/specimen/Poiret+One" target="_blank" title="Poiret One">Poiret One</a> f
 						 or the <abbr title="Timothy Michael Davenport">tmd</abbr> monogram, all served via google webfonts.
 					</p>
@@ -439,8 +439,8 @@ Ecclesiastes 1:9
 <hr/>
 <p>What's with the <code><abbr title="Uniform Resource Locator">url</abbr></code> &amp; name?</p>
 <ol>
-<li>consitent user name, nobody had clamied it on <em>any</em> service I needed,</li>
-<li>begin interested in language and information transfered via characters, vowels are somewhat unecessary to record, like the phoenician alphabet<a alt="W" href="http://en.wikipedia.org/wiki/Phoenician_alphabet" target="_blank" title="W"><sup>W</sup></a> or any abjad<a alt="W" href="http://en.wikipedia.org/wiki/Abjad" target="_blank" title="W"><sup>W</sup></a>.</li>
+<li>consistent user name, nobody had claimed it on <em>any</em> service I needed (\o/),</li>
+<li>begin interested in language and information transferred via characters, vowels are somewhat unnecessary to record, like the phoenician alphabet <a alt="W" href="http://en.wikipedia.org/wiki/Phoenician_alphabet" target="_blank" title="W"><sup>W</sup></a> or any abjad <a alt="W" href="http://en.wikipedia.org/wiki/Abjad" target="_blank" title="W"><sup>W</sup></a>.</li>
 </ol>
 <p>The <a alt="monogram" href="#!/monogram" title="monogram">monogram</a> was made with tightly placed <code>html</code>/<code>css</code>. An embedded <code>base64</code> image version for the <samp><a alt="#!/resume" href="#!/resume" title="#!/resume">#!/resume</a></samp> <em>page</em> was made with this really simple <a alt="python script" href="#!/base64imagepy" title="python script">python script</a>.</p>
 <p>The <em>planetary menu</em> is a nod to the wonder of astronomy and a, potentially humorous, commentary to the fact that by <em>navigating</em> my website, you are metaphorically <em>navigating</em> a world I created.</p>
@@ -461,13 +461,13 @@ Ecclesiastes 1:9
 						There is something enjoyable about hovering over text and seeing a change, therefore, most
 						 <code>&lt;a&gt;</code> tags display their <code>href</code> attribute to show where the link goes,
 						 <code>&lt;abbr&gt;</code> tags display their <code>title</code> attribute to explain the abbreviation and
-						 <code>&lt;time&gt;</code> tags display their <code>datetime</code> attribute to show an ISO8601<a alt="W" href="http://en.wikipedia.org/wiki/ISO_8601" target="_blank" title="W"><sup>W</sup></a> timestamp or duration.
+						 <code>&lt;time&gt;</code> tags display their <code>datetime</code> attribute to show an ISO8601 <a alt="W" href="http://en.wikipedia.org/wiki/ISO_8601" target="_blank" title="W"><sup>W</sup></a> timestamp or duration.
 					</p>
 <p>There are other hidden hover events throughout this <em>page</em> and the rest of the site!</p>
+<div class="row"><p class="geometers">&Alpha;&Gamma;&Epsilon;&Omega;&Mu;&Epsilon;&Tau;&Rho;&Eta;&Tau;&Omicron;&Sigma; &Mu;&Eta;&Delta;&Epsilon;&Iota;&Sigma; &Epsilon;&Iota;&Sigma;&Iota;&Tau;&Omega;</p></div>
 </div>
 </div>
 </div>
-<div class="row"><h1 style="opacity:0;">I'm flattered you copy &amp; pasted something from my website!</h1></div>
 <div class="row">
 <div class="col-sm-12">
 <div class="logowrapper">
@@ -515,27 +515,27 @@ Ecclesiastes 1:9
 <ul>
 <li><code>Python</code> <small>(<abbr title="id est 'that is'">i.e.</abbr> executable pseudo-code!)</small></li>
 <li>
-								Machine Learning<a alt="W" href="http://en.wikipedia.org/wiki/Machine_learning" target="_blank" title="W"><sup>W</sup></a> <small>( <strong>Not</strong> Artificial Intelligence<a alt="W" href="http://en.wikipedia.org/wiki/Artificial_intelligence" target="_blank" title="W"><sup>W</sup></a>)</small>
+								Machine Learning <a alt="W" href="http://en.wikipedia.org/wiki/Machine_learning" target="_blank" title="W"><sup>W</sup></a> <small>( <strong>Not</strong> Artificial Intelligence <a alt="W" href="http://en.wikipedia.org/wiki/Artificial_intelligence" target="_blank" title="W"><sup>W</sup></a>)</small>
 <ul>
-<li>Natural Language Processing<a alt="W" href="http://en.wikipedia.org/wiki/Natural_language_processing" target="_blank" title="W"><sup>W</sup></a></li>
-<li>Genetic Algorithms<a alt="W" href="http://en.wikipedia.org/wiki/Genetic_algorithm" target="_blank" title="W"><sup>W</sup></a>
+<li>Natural Language Processing <a alt="W" href="http://en.wikipedia.org/wiki/Natural_language_processing" target="_blank" title="W"><sup>W</sup></a></li>
+<li>Genetic Algorithms <a alt="W" href="http://en.wikipedia.org/wiki/Genetic_algorithm" target="_blank" title="W"><sup>W</sup></a>
 <ul>
-<li>Symbolic Regression<a alt="W" href="http://en.wikipedia.org/wiki/Symbolic_regression" target="_blank" title="W"><sup>W</sup></a></li>
+<li>Symbolic Regression <a alt="W" href="http://en.wikipedia.org/wiki/Symbolic_regression" target="_blank" title="W"><sup>W</sup></a></li>
 </ul>
 </li>
-<li>Statistical Classification<a alt="W" href="http://en.wikipedia.org/wiki/Statistical_classification" target="_blank" title="W"><sup>W</sup></a>
+<li>Statistical Classification <a alt="W" href="http://en.wikipedia.org/wiki/Statistical_classification" target="_blank" title="W"><sup>W</sup></a>
 <ul>
-<li>Clustering<a alt="W" href="http://en.wikipedia.org/wiki/Cluster_analysis" target="_blank" title="W"><sup>W</sup></a></li>
+<li>Clustering <a alt="W" href="http://en.wikipedia.org/wiki/Cluster_analysis" target="_blank" title="W"><sup>W</sup></a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li>Grapheme<a alt="W" href="http://en.wikipedia.org/wiki/Grapheme" target="_blank" title="W"><sup>W</sup></a> Processing<br/>
+<li>Grapheme <a alt="W" href="http://en.wikipedia.org/wiki/Grapheme" target="_blank" title="W"><sup>W</sup></a> Processing<br/>
 <small>(character-based)</small>
 <ul>
-<li>Regular Expressions<a alt="W" href="http://en.wikipedia.org/wiki/Regular_Expressions" target="_blank" title="W"><sup>W</sup></a></li>
-<li>Lexers<a alt="W" href="http://en.wikipedia.org/wiki/Lexical_analysis" target="_blank" title="W"><sup>W</sup></a> and Parsers<a alt="W" href="http://en.wikipedia.org/wiki/Parsing" target="_blank" title="W"><sup>W</sup></a></li>
-<li>Data Munging<a alt="W" href="http://en.wikipedia.org/wiki/Data_wrangling" target="_blank" title="W"><sup>W</sup></a></li>
+<li>Regular Expressions <a alt="W" href="http://en.wikipedia.org/wiki/Regular_Expressions" target="_blank" title="W"><sup>W</sup></a></li>
+<li>Lexers <a alt="W" href="http://en.wikipedia.org/wiki/Lexical_analysis" target="_blank" title="W"><sup>W</sup></a> and Parsers <a alt="W" href="http://en.wikipedia.org/wiki/Parsing" target="_blank" title="W"><sup>W</sup></a></li>
+<li>Data Munging <a alt="W" href="http://en.wikipedia.org/wiki/Data_wrangling" target="_blank" title="W"><sup>W</sup></a></li>
 </ul>
 </li>
 <li><em>&hellip;Always adding more&hellip;</em></li>
@@ -550,7 +550,7 @@ Ecclesiastes 1:9
 <li>Gardening</li>
 <li>Cooking</li>
 <li>Curing / Fermenting Foods</li>
-<li>Vermiculture<a alt="W" href="http://en.wikipedia.org/wiki/Compost#Vermicompost" target="_blank" title="W"><sup>W</sup></a></li>
+<li>Vermiculture <a alt="W" href="http://en.wikipedia.org/wiki/Compost#Vermicompost" target="_blank" title="W"><sup>W</sup></a></li>
 </ul>
 </div>
 <div class="col-sm-4">
@@ -559,7 +559,7 @@ Ecclesiastes 1:9
 <li>Numbers &amp; Mathematical Relationships</li>
 <li>Time &amp; Space
                                 <ul>
-<li>Chronology<a alt="W" href="http://en.wikipedia.org/wiki/Chronology" target="_blank" title="W"><sup>W</sup></a> &amp; Chronometry<a alt="W" href="http://en.wikipedia.org/wiki/Chronometry" target="_blank" title="W"><sup>W</sup></a></li>
+<li>Chronology <a alt="W" href="http://en.wikipedia.org/wiki/Chronology" target="_blank" title="W"><sup>W</sup></a> &amp; Chronometry <a alt="W" href="http://en.wikipedia.org/wiki/Chronometry" target="_blank" title="W"><sup>W</sup></a></li>
 <li>Positioning (longitude/latitude)</li>
 </ul>
 </li>
@@ -631,11 +631,11 @@ Ecclesiastes 1:9
 <div class="timetext">
 <h4><small>Local</small></h4>
 <time class="h3" id="local">1234567890</time>
-<h4><small><abbr title="Greenwich Mean Time">GMT</abbr> <small>( yes, <abbr title="Coordinated Universal Time">UTC</abbr>, but <abbr title="Greenwich Mean Time">GMT</abbr> is more quaint )<a alt="W" href="http://en.wikipedia.org/wiki/Greenwich_Mean_Time" target="_blank" title="W"><sup>W</sup></a></small></small></h4>
+<h4><small><abbr title="Greenwich Mean Time">GMT</abbr> <small>( yes, <abbr title="Coordinated Universal Time">UTC</abbr>, but <abbr title="Greenwich Mean Time">GMT</abbr> is more quaint ) <a alt="W" href="http://en.wikipedia.org/wiki/Greenwich_Mean_Time" target="_blank" title="W"><sup>W</sup></a></small></small></h4>
 <time class="h3" id="utc">1234567890</time>
-<h4><small>Unix (<abbr title="Portable Operating System Interface">Posix</abbr>, Epoch) Time<a alt="W" href="http://en.wikipedia.org/wiki/Unix_time" target="_blank" title="W"><sup>W</sup></a></small></h4>
+<h4><small>Unix (<abbr title="Portable Operating System Interface">Posix</abbr>, Epoch) Time <a alt="W" href="http://en.wikipedia.org/wiki/Unix_time" target="_blank" title="W"><sup>W</sup></a></small></h4>
 <time class="h3" id="posix">1234567890</time>
-<h4><small>Julian Date<a alt="W" href="http://en.wikipedia.org/wiki/Julian_day" target="_blank" title="W"><sup>W</sup></a></small></h4>
+<h4><small>Julian Date <a alt="W" href="http://en.wikipedia.org/wiki/Julian_day" target="_blank" title="W"><sup>W</sup></a></small></h4>
 <time class="h3" id="julian">1234567890</time>
 </div>
 </div>
