--- a/output/404.html
+++ b/output/404.html
@@ -177,7 +177,7 @@
 <div class="col-sm-8 col-sm-offset-2">
 <h2>Repositories</h2>
 <ul class="list-group" id="project-list">
-<h1 class="text-center">... gathering data ...</h1>
+<li class="list-group-item"><h1 class="text-center">...gathering data...</h1></li>
 </ul>
 </div>
 </div>
@@ -650,6 +650,7 @@ Ecclesiastes 1:9
                     I have not yet written this.
                 </p>
 <p class="lead">
+                    
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
 					 ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
 					 in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
