--- a/output/404.html
+++ b/output/404.html
@@ -544,11 +544,12 @@ Ecclesiastes 1:9
 <div class="col-sm-4">
 <h3><em>Recreational</em><br/><small>activity for activity's sake</small></h3>
 <ul>
-<li>Hiking</li>
+<li>Walking / Hiking</li>
 <li>Reading</li>
-<li>Writing</li>
+<li>Writing (code &amp; prose)</li>
 <li>Gardening</li>
 <li>Cooking</li>
+<li>Investing / Personal Finance</li>
 <li>Curing / Fermenting Foods</li>
 <li>Vermiculture <a alt="W" href="http://en.wikipedia.org/wiki/Compost#Vermicompost" target="_blank" title="W"><sup>W</sup></a></li>
 </ul>
