--- a/output/404.html
+++ b/output/404.html
@@ -71,7 +71,6 @@
 <hr/>
 <h3>Please go back or return <a alt="home." href="index.html" title="home.">home.</a></h3>
 </header>
-<p class="geometers">&Alpha;&Gamma;&Epsilon;&Omega;&Mu;&Epsilon;&Tau;&Rho;&Eta;&Tau;&Omicron;&Sigma; &Mu;&Eta;&Delta;&Epsilon;&Iota;&Sigma; &Epsilon;&Iota;&Sigma;&Iota;&Tau;&Omega;</p>
 </section>
 </main>
 <!--quilted footer patch-->
@@ -132,6 +131,7 @@
 <span class="t logo-letter">t</span>
 </div>
 </div>
+<h1 class="logo-font">Timothy Michael Davenport</h1>
 </div>
 </section>
 </template>
@@ -262,10 +262,8 @@ f2(x) = [ 40.  34.  28.  22.  16.  12.]
 <section class="bringIn">
 <div>
 <header><h1><em>Epigraph</em></h1></header>
+<hr/>
 <blockquote>
-<p>
-                    What you are about to experience may or may not make sense; either you <em>will</em> understand, or you will have been given <strong>strings</strong>, threads to unravel a spool of endless topics <em>to</em> understand.
-                </p>
 <p>
                      Unquestionably, one ought never be bored, for there are far to great a number of things to fascinate and occupy the mind.
                 </p>
@@ -499,6 +497,21 @@ Ecclesiastes 1:9
 </div>
 </div>
 </template>
+<template id="unknown-template">
+<section class="bringIn">
+<div>
+<header class="text-center" id="intro">
+<h1 class="text-font">
+<span class=""><span class="t1">Un</span><span class="bracket">kn</span><span class="t2">ow</span><span class="bracket">n!</span></span>
+</h1>
+<hr/>
+<h2>Hmm...<br/><small>This place doesn't<br/>seem to exist.</small></h2>
+<hr/>
+<h3>Please go back or return <a alt="home." href="index.html" title="home.">home.</a></h3>
+</header>
+</div>
+</section>
+</template>
 <template id="ruminations-template">
 <section class="bringIn">
 <div class="row">
@@ -647,6 +660,7 @@ Ecclesiastes 1:9
 <div class="row">
 <div class="col-sm-8 col-sm-offset-2">
 <header><h1><em>Synopsis</em></h1></header>
+<hr/>
 <p class="lead">
                     I have not yet written this.
                 </p>
