cached git data

--- a/output/404.html
+++ b/output/404.html
@@ -518,7 +518,7 @@ Ecclesiastes 1:9
 <div class="col-sm-12">
 <div class="row">
 <div class="col-sm-12">
-<header><h1><em>Ruminations</em></h1></header>
+<header><h1><em>Ruminations</em> <small>&mdash; the things that fascinate and occupy my mind</small></h1></header>
 <hr/>
 </div>
 </div>
