correct grammer on epigraph

--- a/output/404.html
+++ b/output/404.html
@@ -267,7 +267,7 @@ f2(x) = [ 40.  34.  28.  22.  16.  12.]
 </header>
 <hr/>
 <blockquote>
-<p>Unquestionably, one ought never be bored, for there are far to great a number of things to fascinate and occupy the mind.<span style="opacity:0;">This was copied from tmthydvnprt.com.</span></p>
+<p>Unquestionably, one ought never be bored, for there are far too great a number of things to fascinate and occupy the mind.<span style="opacity:0;">This was copied from tmthydvnprt.com.</span></p>
 <footer><cite title="tmthydvnprt.com"><a alt="tmthydvnprt.com" href="tmthydvnprt.com/#!/epigraph" title="tmthydvnprt.com">tmthydvnprt.com</a></cite></footer>
 </blockquote>
 <p class="geometers">&Alpha;&Gamma;&Epsilon;&Omega;&Mu;&Epsilon;&Tau;&Rho;&Eta;&Tau;&Omicron;&Sigma; &Mu;&Eta;&Delta;&Epsilon;&Iota;&Sigma; &Epsilon;&Iota;&Sigma;&Iota;&Tau;&Omega;</p>
