added featured projects

--- a/output/index.html
+++ b/output/index.html
@@ -152,18 +152,42 @@
 <hr/>
 </div>
 </div>
-<!--
-        <div class="row">
-            <div class="col-sm-8 col-sm-offset-2">
-                <h2>Stats</h2>
-                <div id="project-stats">
-                </div>
-            </div>
-        </div>
-        -->
 <div class="row">
 <div class="col-sm-8 col-sm-offset-2">
-<h2>Repositories</h2>
+<h2>Featured Projects</h2>
+<div id="project-features">
+<div class="row">
+<div class="col-sm-4">
+<div class="well well-sm text-center">
+<div class="iframe-wrap">
+<iframe src="http://tmthydvnprt.com/quilt/"></iframe>
+</div>
+<h2><a alt="quilt" href="http://tmthydvnprt.com/quilt/" title="quilt">quilt</a></h2>
+</div>
+</div>
+<div class="col-sm-4">
+<div class="well well-sm text-center">
+<div class="iframe-wrap">
+<iframe src="http://tmthydvnprt.com/juxtapy/"></iframe>
+</div>
+<h2><a alt="juxtapy" href="http://tmthydvnprt.com/juxtapy/" title="juxtapy">juxtapy</a></h2>
+</div>
+</div>
+<div class="col-sm-4">
+<div class="well well-sm text-center">
+<div class="iframe-wrap">
+<iframe src="http://tmthydvnprt.com/aggregit/"></iframe>
+</div>
+<h2><a alt="aggregit" href="http://tmthydvnprt.com/aggregit/" title="aggregit">aggregit</a></h2>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="row">
+<div class="col-sm-8 col-sm-offset-2">
+<h2>All GitHub Repositories <small><a alt="tmthydvnprt's repos" href="https://github.com/tmthydvnprt?tab=repositories" target="_blank" title="tmthydvnprt's repos"><i class="fa fa-github"></i></a></small></h2>
 <ul class="list-group" id="project-list">
 <li class="list-group-item"><h1 class="text-center">...gathering data...</h1></li>
 </ul>
