--- a/output/404.html
+++ b/output/404.html
@@ -343,7 +343,7 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAACXBIWXMAAA
 <h3>Design</h3>
 <hr/>
 <p>
-						The site's strucutre is based loosely on a book (epigraph, fliping animation, colophon, <abbr title="et cetera 'and so forth'">etc.</abbr>).
+						The site's structure is based loosely on a book (epigraph, fliping animation, colophon, <abbr title="et cetera 'and so forth'">etc.</abbr>).
                         A look at the <span class="code-font">source</span> of this site will identify a static one-page design with <code>&lt;template&gt;</code>s and a simple
 						 <code>hashchange</code> router. Downloading a whole website from one <code><abbr title="Uniform Resource Locator">url</abbr></code>,
 						 still with an interactive or nested experience, seems very elegant. Being interested in Machine Learning, the idea of
@@ -557,10 +557,10 @@ Ecclesiastes 1:9
 <li><code>Python</code> <small>(<abbr title="id est 'that is'">i.e.</abbr> executable pseudo-code!)</small></li>
 <li>Data Visualization
                                 <ul>
-<li>Ploting, Graphing</li>
+<li>Plotting, Graphing</li>
 <li>Making complex data simple &amp; accessible</li>
 <li>Data Munging <a alt="W" href="http://en.wikipedia.org/wiki/Data_wrangling" target="_blank" title="W"><sup>W</sup></a></li>
-<li>Map Reduce<a alt="W" href="http://en.wikipedia.org/wiki/MapReduce" target="_blank" title="W"><sup>W</sup></a> type aggregating</li>
+<li>Map Reduce <a alt="W" href="http://en.wikipedia.org/wiki/MapReduce" target="_blank" title="W"><sup>W</sup></a> type aggregating</li>
 </ul>
 </li>
 <li>
@@ -582,7 +582,7 @@ Ecclesiastes 1:9
 <li>Grapheme <a alt="W" href="http://en.wikipedia.org/wiki/Grapheme" target="_blank" title="W"><sup>W</sup></a> Processing
                                 <small>(character-based)</small>
 <ul>
-<li>Syntax and Grammers</li>
+<li>Syntax and Grammars</li>
 <li>Regular Expressions <a alt="W" href="http://en.wikipedia.org/wiki/Regular_Expressions" target="_blank" title="W"><sup>W</sup></a></li>
 <li>Lexers <a alt="W" href="http://en.wikipedia.org/wiki/Lexical_analysis" target="_blank" title="W"><sup>W</sup></a> and Parsers <a alt="W" href="http://en.wikipedia.org/wiki/Parsing" target="_blank" title="W"><sup>W</sup></a></li>
 </ul>
