updated resume and synopsis page

--- a/output/index.html
+++ b/output/index.html
@@ -688,21 +688,10 @@ Ecclesiastes 1:9
                     I have not yet written this.
                 </p>
 <p class="lead">
-                    
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-					 ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-					 in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-					 deserunt mollit anim id est laborum.
-				</p>
+                    An electrical engineer turned computer scientist (after coming across extremely interesting techniques used during graduate research). 
+                </p>
 <p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-					 ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-					 in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-					 deserunt mollit anim id est laborum.
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-					 ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-					 in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-					 deserunt mollit anim id est laborum.
+                    Loves high-level languages &amp; algorithms that allow for development at an information / data level where most of the implementation is abstracted from the processing (enter python, stage right, playing the part of executable psuedo-code). With a good dose of client side web stack experience for interesting presentation layers and user interaction, long-term interests include python, machine learning, data-mining, data visualization and natural language processing.
 				</p>
 </div>
 </div>
