add publication to resume

--- a/output/404.html
+++ b/output/404.html
@@ -854,7 +854,7 @@ Ecclesiastes 1:9
 <li>
 <h3 class="p-publication"></h3>
 <em><h4 class="p-name"></h4></em>
-<h4><small>by <span class="p-author"></span>, awarded <time class="dt-published"></time></small></h4>
+<h4><small>by <span class="p-author"></span>, published <time class="dt-published"></time></small></h4>
 </li>
 <li>
 <blockquote>
@@ -902,7 +902,7 @@ Ecclesiastes 1:9
 <hr/>
 <div class="row">
 <div class="col-sm-10 col-sm-offset-1">
-<div class="p-publication"></div>
+<div class="p-publications"></div>
 </div>
 </div>
 <hr/>
