--- a/source/patches/h-templates.html
+++ b/source/patches/h-templates.html
@@ -143,11 +143,11 @@
 		<li>
 			<h3 class="p-publication"></h3>
 			<em><h4 class="p-name"></h4></em>
-			<h4><small>by <span class="p-author"></span>, awarded <time class="dt-published"></time></small></h4>
+			<h4><small>by <span class="p-author"></span>, published <time class="dt-published"></time></small></h4>
 		</li>
 		<li>
 			<blockquote>
-				<p class="p-content"></p>
+				<small><p class="p-content"></p></small>
 				<footer><cite><a class="u-url"></a></cite></footer>
 			</blockquote>
 		</li>
@@ -191,7 +191,7 @@
 		<hr>
 		<div class="row">
 			<div class="col-sm-10 col-sm-offset-1">
-				<div class="p-publication"></div>
+				<div class="p-publications"></div>
 			</div>
 		</div>
 		<hr>
