initial blog structure

--- a/output/404.html
+++ b/output/404.html
@@ -92,6 +92,12 @@
 <header><h1><em>?</em></h1></header>
 <p>Click the arrows (or use your keyboard's arrow keys) to view <em>pages</em> in order, otherwise use the <em>planetary menu</em> in the upper left.</p>
 </div>
+<div class="holdoff updn6" id="blog-link">
+    &para;
+     <span id="slideover">
+<a alt="blog posts" class="no-hover" href="posts/index.html" title="blog posts">blog posts</a>
+</span>
+</div>
 <div class="holdoff updn5" id="at">
     @
      <span id="slideover">
@@ -149,8 +155,8 @@
 <div class="navbar-header">
 <span class="navbar-brand"><a alt="R&eacute;sum&eacute; :" class="no-hover" href="#!/resume" title="R&eacute;sum&eacute; :">R&eacute;sum&eacute; :</a></span>
 <ul class="nav navbar-nav navbar-left">
-<li><a alt=" document" class="no-hover" href="#document" title=" document"><i class="fa fa-fw fa-file-text"></i> document</a></li>
-<li><a alt=" timeline" class="no-hover" href="#timeline" title=" timeline"><i class="fa fa-fw fa-tasks"></i> timeline</a></li>
+<li><a alt=" document" class="no-hover" href="#document" title=" document"><i class="fa fa-fw fa-file-text-o"></i> document</a></li>
+<li><a alt=" timeline" class="no-hover" href="#timeline" title=" timeline"><i class="fa fa-fw fa-sliders"></i> timeline</a></li>
 </ul>
 </div>
 </div>
@@ -728,9 +734,9 @@ Ecclesiastes 1:9
                     I rationalize my juxtaposed levels of experience by having an forward looking focus on the high level to drive my interests, development ideas, and future projects, while using the background of low level to stay grounded in reality and computational practicality. While I prefer the abstract processing for my future endeavors, my hardware background gives me an appreciation for the physical implementation, this becomes useful and the tool I pull out when profiling or optimizing a bottleneck. High Level is what <em>could</em> be done tomorrow, low level is what <em>can</em> be done today.
                 </p>
 <p>
-                You know when you read a good book or a quote from your favorite author and you find one of those sentences where you just can't believe what they were able to express with a particular sequence of words? It can be simple or complex, short or long. It was so creative, exactly what you feel and know, but so clever that you are suprised?  Your spirits rise, you say Hmm? and AH HA! simultaneously and your mind is satisfied. That is how I feel when I read and write <code>python</code>!  I can't believe what and how things can be expressed with this language.  It is beautiful.
+                You know when you read a good book or a quote from your favorite author and you find one of those sentences where you just can't believe what they were able to express with a particular sequence of words? It can be simple or complex, short or long. It was so creative, exactly what you feel and know, but so clever that you are surprised?  Your spirits rise, you say Hmm? and AH HA! simultaneously and your mind is satisfied. That is how I feel when I read and write <code>python</code>!  I can't believe what and how things can be expressed with this language.  It is beautiful.
 				</p>
-<p>I am a digital explorer. I find an interesting symbolism in the fact that silicon valley is in california, westward expansion did not stop when we reached the ocean, it just became virtual.  Humans must still explore this new land.  Like the pioneers moving west, not knowing where they are going on a daily timeframe or how they will provide for themselve, they kept pushing in one direction, eventually finding a perfect spot to settle.  This is how I work and live, I am exploring the virtual and computational landscape, I often wonder where I'm going, but it all adds up to one direction: teaching machines to do what I am incapable of.<br/>I keep a <a alt="log" href="blog.html" title="log">log</a> of my <em>travels</em>.</p>
+<p>I am a digital explorer. I find an interesting symbolism in the fact that silicon valley is in california, westward expansion did not stop when we reached the ocean, it just became virtual.  Humans must still explore this new land.  Like the pioneers moving west, not knowing where they are going on a daily timeframe or how they will provide for themself, they kept pushing in one direction, eventually finding a perfect spot to settle.  This is how I work and live, I am exploring the virtual and computational landscape, I often wonder where I'm going, but it all adds up to one direction: teaching machines to do what I am incapable of.<br/>Here is a <a alt="log" href="posts/index.html" title="log">log</a> of my <em>travels</em>.</p>
 <!--// for creating interesting and beautiful presentation layers or user interactions // the possibilities of what can be done when one learns to talk to machines are endless! -->
 </div>
 </div>
