--- a/source/patches/footer.html
+++ b/source/patches/footer.html
@@ -16,6 +16,12 @@
 	<header><h1><em>?</em></h1></header>
 	<p>Click the arrows (or use your keyboard's arrow keys) to view <em>pages</em> in order, otherwise use the <em>planetary menu</em> in the upper left.</p>
 </div>
+<div id="blog-link" class="holdoff updn6">
+    &para;
+     <span id="slideover">
+         <a class="no-hover" href="posts/index.html" alt="blog posts" title="blog posts">blog posts</a>
+    </span>
+</div>
 <div id="at" class="holdoff updn5">
     @
      <span id="slideover">
