update styles and blog structure

--- a/source/patches/markdown.html
+++ b/source/patches/markdown.html
@@ -1,2 +1,2 @@
 {{markdown}}
-<a class="markdown-link" href="{{markdownlink}}" alt="view original markdown" title="view original markdown" role="button">markdown</a>
+<a class="markdown-link no-hover" href="{{markdownlink}}" alt="view original markdown" title="view original markdown" role="button">markdown</a>
