--- a/output/404.html
+++ b/output/404.html
@@ -84,13 +84,20 @@
 </a>
 </div>
 <time id="localtime">&zwnj;</time>
-<div class="holdoff updn3" id="backnext">
-<a alt="&larr;" class="no-hover" href="#back" id="back" title="&larr;"><kbd><small>&larr;</small></kbd></a>
-<a alt="&rarr;" class="no-hover" href="#next" id="next" title="&rarr;"><kbd><small>&rarr;</small></kbd></a>
+<div class="holdoff updn3" id="help">
+<span id="question">?</span>
 </div>
 <div id="info">
-<header><h1><em>?</em></h1></header>
-<p>Click the arrows (or use your keyboard's arrow keys) to view <em>pages</em> in order, otherwise use the <em>planetary menu</em> in the upper left.</p>
+<div class="row">
+<div class="col-sm-8 col-sm-offset-2">
+<header>
+<h1><em>Help {?}</em></h1>
+</header>
+<p>
+                Use the <em>planetary</em> menu in the upper left, or your keyboard's arrows to navigate this site.
+            </p>
+</div>
+</div>
 </div>
 <div class="holdoff updn6" id="blog-link">
     &para;
