--- a/source/patches/footer.html
+++ b/source/patches/footer.html
@@ -8,13 +8,20 @@
     </a>
 </div>
 <time id="localtime">&zwnj;</time>
-<div id="backnext" class="holdoff updn3">
-    <a id="back" href="#back" class="no-hover"><kbd><small>&larr;</small></kbd></a>
-    <a id="next" href="#next" class="no-hover"><kbd><small>&rarr;</small></kbd></a>
+<div id="help" class="holdoff updn3">
+    <span id="question">?</span>
 </div>
 <div id="info">
-    <header><h1><em>?</em></h1></header>
-    <p>Click the arrows (or use your keyboard's arrow keys) to view <em>pages</em> in order, otherwise use the <em>planetary menu</em> in the upper left.</p>
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+            <header>
+                <h1><em>Help {?}</em></h1>
+            </header>
+            <p>
+                Use the <em>planetary</em> menu in the upper left, or your keyboard's arrows to navigate this site.
+            </p>
+        </div>
+    </div>
 </div>
 <div id="blog-link" class="holdoff updn6">
     &para;
