update bio and synopsis

--- a/source/patches/footer.html
+++ b/source/patches/footer.html
@@ -23,12 +23,12 @@
         </div>
     </div>
 </div>
-<div id="blog-link" class="holdoff updn6">
+<!-- <div id="blog-link" class="holdoff updn6">
     &para;
      <span id="slideover">
          <a class="no-hover" href="posts/index.html" alt="blog posts" title="blog posts">blog posts</a>
     </span>
-</div>
+</div> -->
 <div id="at" class="holdoff updn5">
     @
      <span id="slideover">
