--- a/output/404.html
+++ b/output/404.html
@@ -99,12 +99,12 @@
 </div>
 </div>
 </div>
-<div class="holdoff updn6" id="blog-link">
+<!-- <div id="blog-link" class="holdoff updn6">
     &para;
      <span id="slideover">
-<a alt="blog posts" class="no-hover" href="posts/index.html" title="blog posts">blog posts</a>
-</span>
-</div>
+         <a class="no-hover" href="posts/index.html" alt="blog posts" title="blog posts">blog posts</a>
+    </span>
+</div> -->
 <div class="holdoff updn5" id="at">
     @
      <span id="slideover">
@@ -746,11 +746,12 @@ Ecclesiastes 1:9
 <hr/>
 <h2>Hi!</h2>
 <p class="lead">
-                    My name is Timothy Davenport, most call me Tim; some places I am known by <a alt="tmthydvnprt" href="http://tmthydvnprt.com" title="tmthydvnprt">tmthydvnprt</a> (<a alt="have a look at my site's colophon to read why" href="#!/colophon" title="have a look at my site's colophon to read why"><em>have a look at my site's colophon to read why</em></a>).  I am a Number Cruncher; finding or creating value in and with data.
+                    My name is Timothy Davenport, most call me Tim.
+                    <br/>Some places I am known by <code>tmthydvnprt</code>.
+                    <br/>I am a Number Cruncher; finding or creating value with data.
                 </p>
 <p>
-                    I am an <del>electrical engineer</del> computer scientist, software developer, data scientist, something-of-that-nature, <del>obsessed with</del> interested in all things data: its gathering, reduction, analysis or prediction.
-                </p>
+</p>
 </div>
 </div>
 </section>
